--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,14 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>Elite Schedule App</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
+    <ion-list-header>Navigate</ion-list-header>
+    <button menuClose ion-item (click)="goHome()">Home</button>
+    <button menuClose ion-item (click)="goToTournaments()">Find a tournament</button>
   </ion-content>
 
 </ion-menu>
